--- a/firebase.json
+++ b/firebase.json
@@ -6,5 +6,22 @@
       "**/.*",
       "**/node_modules/**"
     ]
+  },
+  "emulators": {
+    "apphosting": {
+      "port": 5002,
+      "rootDirectory": "./",
+      "startCommand": "npm run dev"
+    },
+    "hosting": {
+      "port": 5000
+    },
+    "ui": {
+      "enabled": true
+    },
+    "singleProjectMode": true,
+    "storage": {
+      "port": 9199
+    }
   }
 }
